--- a/samboni-astro/src/components/Store.astro
+++ b/samboni-astro/src/components/Store.astro
@@ -56,6 +56,7 @@ for (const collection of collections) {
                 const variant = product.variants?.edges?.[0]?.node;
                 const variantId = variant?.id || "";
                 const availableForSale = variant?.availableForSale ?? true;
+                const quantityAvailable = variant?.quantityAvailable ?? 0;
 
                 return (
                   <ProductCard
@@ -65,6 +66,7 @@ for (const collection of collections) {
                     description={product.description}
                     variantId={variantId}
                     availableForSale={availableForSale}
+                    quantityAvailable={quantityAvailable}
                   />
                 );
               })
