--- a/samboni-astro/src/components/CartDrawer.astro
+++ b/samboni-astro/src/components/CartDrawer.astro
@@ -2,13 +2,33 @@
 import Welcome from "./Welcome.astro";
 import Store from "./Store.astro";
 import CartProductCard from "./CartProductCard.astro";
+import About from "./About.astro";
 ---
 
 <div class="drawer drawer-end">
   <input id="my-drawer-5" type="checkbox" class="drawer-toggle" />
   <div class="drawer-content">
-    <Welcome />
-    <Store />
+    <div class="overflow-hidden w-screen h-screen">
+		<div id="slider" class="flex w-[200vw] h-screen">
+			<section class="w-screen h-screen bg-base-200 relative before:w-screen before:absolute before:inset-0 before:bg-[url('/pattern.png')] before:bg-repeat before:bg-size-[100px_100px] before:mix-blend-soft-light before:opacity-70">
+				<Welcome />
+				<div id="go-to-about" class="absolute right-0 top-0 w-16 md:w-24 h-full cursor-pointer z-50 flex items-center justify-center group">
+					<div class="opacity-30 group-hover:opacity-100 transition-opacity">
+						<h2 class="text-2xl -rotate-90">ABOUT</h2>
+					</div>
+				</div>
+			</section>
+			<section class="w-screen h-screen bg-base-200 relative before:w-screen before:absolute before:inset-0 before:bg-[url('/pattern.png')] before:bg-repeat before:bg-size-[100px_100px] before:mix-blend-soft-light before:opacity-70">
+				<About />
+				<div id="go-to-welcome" class="absolute left-0 top-0 w-16 md:w-24 h-full cursor-pointer z-50 flex items-center justify-center group">
+					<div class="opacity-30 group-hover:opacity-100 transition-opacity">
+						<h2 class="text-2xl rotate-90">HOME</h2>
+					</div>
+				</div>
+			</section>
+		</div>
+	</div>
+  <Store />
     <label for="my-drawer-5" class="drawer-button btn btn-primary">
       CART <span id="cart-count" class="badge badge-soft badge-info">0</span>
     </label>
@@ -38,3 +58,5 @@ import CartProductCard from "./CartProductCard.astro";
 </div>
 
 <script src="../scripts/cart.ts"></script>
+<script src="../scripts/landing-slider.ts"></script>
+<script src="../scripts/welcome-animation.ts"></script>
