--- a/samboni-astro/src/components/CartDrawer.astro
+++ b/samboni-astro/src/components/CartDrawer.astro
@@ -1,61 +1,11 @@
 ---
 import Welcome from "./Welcome.astro";
 import Store from "./Store.astro";
-import CartProductCard from "./CartProductCard.astro";
 import About from "./About.astro";
+import Nav from "./Nav.astro";
 ---
 
-<div class="drawer drawer-end">
-  <input id="my-drawer-5" type="checkbox" class="drawer-toggle" />
-  <div class="drawer-content">
-    <div class="overflow-hidden w-screen h-screen">
-		<div id="slider" class="flex w-[200vw] h-screen">
-			<section class="w-screen h-screen bg-base-200 relative before:w-screen before:absolute before:inset-0 before:bg-[url('/pattern.png')] before:bg-repeat before:bg-size-[100px_100px] before:mix-blend-soft-light before:opacity-70">
-				<Welcome />
-				<div id="go-to-about" class="absolute right-0 top-0 w-16 md:w-24 h-full cursor-pointer z-50 flex items-center justify-center group">
-					<div class="opacity-30 group-hover:opacity-100 transition-opacity">
-						<h2 class="text-2xl -rotate-90">ABOUT</h2>
-					</div>
-				</div>
-			</section>
-			<section class="w-screen h-screen bg-base-200 relative before:w-screen before:absolute before:inset-0 before:bg-[url('/pattern.png')] before:bg-repeat before:bg-size-[100px_100px] before:mix-blend-soft-light before:opacity-70">
-				<About />
-				<div id="go-to-welcome" class="absolute left-0 top-0 w-16 md:w-24 h-full cursor-pointer z-50 flex items-center justify-center group">
-					<div class="opacity-30 group-hover:opacity-100 transition-opacity">
-						<h2 class="text-2xl rotate-90">HOME</h2>
-					</div>
-				</div>
-			</section>
-		</div>
-	</div>
-  <Store />
-    <label for="my-drawer-5" class="drawer-button btn btn-primary">
-      CART <span id="cart-count" class="badge badge-soft badge-info">0</span>
-    </label>
-  </div>
-  <div class="drawer-side">
-    <label for="my-drawer-5" aria-label="close sidebar" class="drawer-overlay"
-    ></label>
-    <div class="bg-base-200 min-h-full w-1/2 p-4 flex flex-col">
-      <h1 class="text-2xl font-bold">CART</h1>
-      <hr class="my-4" />
 
-      <div id="cart-items" class="flex-1 overflow-y-auto">
-        <p class="text-center text-gray-500">Loading cart...</p>
-        <!-- <CartProductCard /> -->
-        <!-- <CartProductCard /> -->
-      </div>
-      <hr />
-      <div id="cart-total" class="mt-4 mb-2 text-xl font-bold hidden">
-        Total: <span id="total-amount">$0.00</span>
-      </div>
-
-      <a id="checkout-btn" href="#" class="btn btn-primary w-full hidden"
-        >CHECKOUT</a
-      >
-    </div>
-  </div>
-</div>
 
 <script src="../scripts/cart.ts"></script>
 <script src="../scripts/landing-slider.ts"></script>
