adjust slug page

--- a/samboni-astro/src/components/Store.astro
+++ b/samboni-astro/src/components/Store.astro
@@ -25,7 +25,7 @@ for (const collection of collections) {
     <h1 class="text-2xl sm:text-2xl md:text-6xl border-b pb-2">Store</h1>
 
     <div class="w-full h-80 top-spacing relative">
-      <p class="absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 text-center text-base-content text-4xl font-black text-nowrap ">SHOP SAMBONI'S SELECTION OF COFFEE</p>
+      <p class="absolute text-xl md:text-3xl w-full left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 text-center text-base-content font-black md:no-wrap">SHOP SAMBONI'S SELECTION OF COFFEE</p>
       <img src="/images/samboni-coffee.png" class="w-full h-full object-cover border-4 border-base-300" alt="" />
     </div>
 
