--- a/samboni-astro/src/components/Nav.astro
+++ b/samboni-astro/src/components/Nav.astro
@@ -1,12 +1,12 @@
-<div class="px-6 top-3 absolute z-100 w-screen">
+<div class="px-6 top-3 z-100 w-screen">
     <div class="navbar bg-transparent border-b border-accent">
         <div class="flex-1">
-            <a href="/" class="text-4xl font-['Fraunces'] font-black">Samboni</a>
+            <a href="/" class="text-2xl md:text-4xl font-['Fraunces'] font-black">Samboni</a>
         </div>
-        <div class="flex-none font-['Fraunces']">
+        <div class="font-['Fraunces'] flex items-center gap-5">
             <!-- Hamburger menu for small screens -->
             <div class="dropdown dropdown-end md:hidden">
-                <label tabindex="0" class="btn btn-ghost">
+                <label tabindex="0" class="btn btn-ghost p-0">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
                     </svg>
@@ -24,10 +24,11 @@
             <!-- Cart button (always visible) -->
             <label for="my-drawer-5" class="nav-button cursor-pointer relative">
                 <div class="pointer-events-none">
-                    <img src="/icons/bag.svg" width="30" height=30" class="text-2xl"></object>
-                    <span id="cart-count" class="badge badge-soft bg-info border-none rounded-full badge-info-content absolute top-0 -right-4 -translate-x-1/2 ">0</span>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="w-7 h-7 fill-current" viewBox="0 -960 960 960"><path d="M200-80q-33 0-56.5-23.5T120-160v-480q0-33 23.5-56.5T200-720h80q0-83 58.5-141.5T480-920q83 0 141.5 58.5T680-720h80q33 0 56.5 23.5T840-640v480q0 33-23.5 56.5T760-80H200Zm0-80h560v-480H200v480Zm280-240q83 0 141.5-58.5T680-600h-80q0 50-35 85t-85 35q-50 0-85-35t-35-85h-80q0 83 58.5 141.5T480-400ZM360-720h240q0-50-35-85t-85-35q-50 0-85 35t-35 85ZM200-160v-480 480Z"/></svg>
+                    <span id="cart-count" class="badge badge-soft bg-info border-none rounded-full badge-info-content absolute top-0 -right-4  ">0</span>
                 </div>
             </label>
         </div>
     </div>
 </div>
+
