--- a/samboni-astro/src/pages/index.astro
+++ b/samboni-astro/src/pages/index.astro
@@ -8,7 +8,7 @@ import Store from "../components/Store.astro";
 
 <Layout>
     <CartDrawerContainer>
-        <section class="w-screen h-screen bg-base-200 relative before:w-screen before:absolute before:inset-0 before:bg-[url('/pattern.png')] before:bg-repeat before:bg-size-[100px_100px] before:mix-blend-soft-light before:opacity-70">
+        <section class="w-screen h-screen">
             <Welcome />
         </section>
         <Store />
