--- a/samboni-astro/src/components/Footer.astro
+++ b/samboni-astro/src/components/Footer.astro
@@ -1,3 +1,3 @@
 <footer class="bg-base-200 w-full h-full pt-4 pb-4">
-    <h3 class="border-base-content border-y py-2 mx-10 text-center text-base-content">Copyright © - Samboni - All rights reserved.</h3>
+    <h3 class="border-base-content border-y py-2 mx-10 text-center text-base-content font-[500]">Copyright © - Samboni - All rights reserved.</h3>
 </footer>
