--- a/samboni-astro/src/layouts/CartDrawerContainer.astro
+++ b/samboni-astro/src/layouts/CartDrawerContainer.astro
@@ -1,14 +1,13 @@
-<div class="drawer drawer-end bg-base-200 min-h-screen">
+<div class="drawer drawer-end min-h-screen">
   <input id="my-drawer-5" type="checkbox" class="drawer-toggle" />
-  <div class="drawer-content bg-base-200 min-h-screen">
+  <div class="drawer-content min-h-screen">
         <slot />
   </div>
   <div class="drawer-side z-200">
-    <label for="my-drawer-5" aria-label="close sidebar" class="drawer-overlay bg-opacity-50"></label>
+    <label for="my-drawer-5" aria-label="close sidebar" class="drawer-overlay"></label>
     <div class="bg-base-300 min-h-full w-1/2 p-4 flex flex-col">
       <h1 class="text-2xl font-bold">CART</h1>
       <hr class="my-4" />
-
       <div id="cart-items" class="flex-1 overflow-y-auto">
         <p class="text-center text-gray-500">Loading cart...</p>
       </div>
