--- a/samboni-astro/src/components/Footer.astro
+++ b/samboni-astro/src/components/Footer.astro
@@ -1,3 +1,8 @@
-<footer class="bg-base-200 w-full h-full pt-4 pb-4">
-    <h3 class="border-base-content border-y py-2 mx-10 text-center text-base-content font-[500]">Copyright © - Samboni - All rights reserved.</h3>
+<footer class="w-full h-full pt-4 z-100 relative">
+    <div class="w-full h-auto">
+        <svg id="visual" viewBox="0 0 1000 20" class="w-full h-auto block fill-white" width="1000" height="20" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"><path d="M0 7L11.2 8.2C22.3 9.3 44.7 11.7 66.8 11.7C89 11.7 111 9.3 133.2 8.8C155.3 8.3 177.7 9.7 200 9.5C222.3 9.3 244.7 7.7 266.8 7.5C289 7.3 311 8.7 333.2 9C355.3 9.3 377.7 8.7 400 8.8C422.3 9 444.7 10 466.8 9.8C489 9.7 511 8.3 533.2 8.3C555.3 8.3 577.7 9.7 600 10.5C622.3 11.3 644.7 11.7 666.8 10.7C689 9.7 711 7.3 733.2 6.5C755.3 5.7 777.7 6.3 800 6.2C822.3 6 844.7 5 866.8 5.5C889 6 911 8 933.2 8.2C955.3 8.3 977.7 6.7 988.8 5.8L1000 5L1000 21L988.8 21C977.7 21 955.3 21 933.2 21C911 21 889 21 866.8 21C844.7 21 822.3 21 800 21C777.7 21 755.3 21 733.2 21C711 21 689 21 666.8 21C644.7 21 622.3 21 600 21C577.7 21 555.3 21 533.2 21C511 21 489 21 466.8 21C444.7 21 422.3 21 400 21C377.7 21 355.3 21 333.2 21C311 21 289 21 266.8 21C244.7 21 222.3 21 200 21C177.7 21 155.3 21 133.2 21C111 21 89 21 66.8 21C44.7 21 22.3 21 11.2 21L0 21Z" fill="white" stroke-linecap="round" stroke-linejoin="miter"></path></svg>
+        <div class="w-full bg-white flex justify-center items-center">
+            <h3 class=" py-2 mx-10 text-center font-medium text-accent">Copyright © - Samboni - All rights reserved.</h3>
+        </div>
+    </div>
 </footer>
