--- a/samboni-astro/src/pages/index.astro
+++ b/samboni-astro/src/pages/index.astro
@@ -8,7 +8,7 @@ import Store from "../components/Store.astro";
 
 <Layout>
     <CartDrawerContainer>
-        <section class="w-screen h-screen">
+        <section class="w-full h-screen">
             <Welcome />
         </section>
         <Store />
