--- a/samboni-astro/src/components/Header.astro
+++ b/samboni-astro/src/components/Header.astro
@@ -21,8 +21,14 @@ const { title } = Astro.props;
   </svg>
 </header>
 
-<!-- <style>
+<style>
   header :global(.navbar) {
     border-color: white;
   }
-</style> -->
+  header :global(.nav-button:hover) {
+    border-color: transparent !important;
+    border-bottom-color: white !important;
+    background-color: transparent !important;
+    color: white !important;
+  }
+</style>
