--- a/samboni-astro/src/components/Nav.astro
+++ b/samboni-astro/src/components/Nav.astro
@@ -1,12 +1,12 @@
-<div class="px-6 top-3 z-100 w-screen">
+<div class="px-6 top-3 z-100 w-full">
     <div class="navbar bg-transparent border-b border-accent">
         <div class="flex-1">
             <a href="/" class="text-2xl md:text-4xl font-['Fraunces'] font-black">Samboni</a>
         </div>
-        <div class="font-['Fraunces'] flex items-center gap-5">
+        <div class="font-['Fraunces'] flex items-center gap-3">
             <!-- Hamburger menu for small screens -->
             <div class="dropdown dropdown-end md:hidden">
-                <label tabindex="0" class="btn btn-ghost p-0">
+                <label tabindex="0" class="nav-button cursor-pointer p-2">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
                     </svg>
@@ -18,7 +18,7 @@
             </div>
 
             <!-- Desktop menu items -->
-            <a href="/about" id="g" class="nav-button font-bold hidden md:inline-flex">ABOUT</a>
+            <a href="/about" class="nav-button font-bold hidden md:inline-flex">ABOUT</a>
             <a href="/#Store" class="nav-button font-bold hidden md:inline-flex">STORE</a>
 
             <!-- Cart button (always visible) -->
