--- a/samboni-astro/src/components/Store.astro
+++ b/samboni-astro/src/components/Store.astro
@@ -20,7 +20,7 @@ for (const collection of collections) {
 }
 ---
 
-<section class="w-screen h-auto top-spacing" id="Store">
+<section class="w-full h-auto top-spacing" id="Store">
   <div class="container">
     <h1 class="text-2xl sm:text-2xl md:text-6xl border-b pb-2">Store</h1>
 
