--- a/samboni-astro/src/pages/products/[slug].astro
+++ b/samboni-astro/src/pages/products/[slug].astro
@@ -37,33 +37,33 @@ const product = await response.json()
 <LayoutTwo>
   <Header title="COFFEE"/>
  <CartDrawerContainer>
-      <main class="container">
-    <div class="flex flex-col md:grid md:grid-cols-2 gap-8">
+      <main class="md:container top-spacing">
+    <div class="flex flex-col md:grid md:grid-cols-2 md:grid-rows-[auto_1fr] gap-8">
       <!-- Product Image -->
-      <div class="order-2">
+      <div class="order-2 md:order-0 md:col-start-1 md:row-span-2 relative w-full aspect-square md:aspect-auto">
         <img
           src={product.images?.edges?.[0]?.node?.url}
           alt={product.images?.edges?.[0]?.node?.altText || product.title}
-          class="w-full rounded-lg"
+          class="w-full h-full"
         />
       </div>
 
       <!-- Product Details -->
-      <div class="order-1 md:order-2">
-        <h1 class="text-3xl font-bold mb-4">{product.title}</h1>
-        <p class="text-2xl text-gray-700 mb-4">
-          £{product.priceRange?.minVariantPrice?.amount}
+      <div class="order-1 md:order-0 md:col-start-2 flex flex-col justify-center md:justify-start">
+        <h1 class="text-2xl font-medium mt-2">{product.title}</h1>
+        <p class="text-xl text-gray-700">
+          £{parseFloat(product.priceRange?.minVariantPrice?.amount).toFixed(2)}
         </p>
       </div>
 
-      <div class="order-3">
+      <div class="order-3 md:order-0 md:col-start-2 flex flex-col md:justify-between">
         <div class="prose mb-6" set:html={product.descriptionHtml}>
         </div>
-            <button class="btn btn-info add-to-cart-btn"
-            data-variant-id={product.variants?.edges?.[0]?.node?.id}>
-            Add to Cart
-          </button>
-    </div>
+        <button class="btn btn-info add-to-cart-btn"
+          data-variant-id={product.variants?.edges?.[0]?.node?.id}>
+          Add to Cart
+        </button>
+      </div>
   </main>
  </CartDrawerContainer>
 </LayoutTwo>
