fix css, adjust ui

--- a/samboni-astro/src/layouts/CartDrawerContainer.astro
+++ b/samboni-astro/src/layouts/CartDrawerContainer.astro
@@ -1,6 +1,6 @@
-<div class="drawer drawer-end min-h-screen">
+<div class="drawer drawer-end min-h-screen bg-transparent">
   <input id="my-drawer-5" type="checkbox" class="drawer-toggle" />
-  <div class="drawer-content min-h-screen">
+  <div class="drawer-content min-h-screen bg-transparent">
         <slot />
   </div>
   <div class="drawer-side z-200">
