--- a/samboni-astro/src/components/Nav.astro
+++ b/samboni-astro/src/components/Nav.astro
@@ -25,7 +25,7 @@
             <label for="my-drawer-5" class="nav-button cursor-pointer relative">
                 <div class="pointer-events-none">
                     <svg xmlns="http://www.w3.org/2000/svg" class="w-7 h-7 fill-current" viewBox="0 -960 960 960"><path d="M200-80q-33 0-56.5-23.5T120-160v-480q0-33 23.5-56.5T200-720h80q0-83 58.5-141.5T480-920q83 0 141.5 58.5T680-720h80q33 0 56.5 23.5T840-640v480q0 33-23.5 56.5T760-80H200Zm0-80h560v-480H200v480Zm280-240q83 0 141.5-58.5T680-600h-80q0 50-35 85t-85 35q-50 0-85-35t-35-85h-80q0 83 58.5 141.5T480-400ZM360-720h240q0-50-35-85t-85-35q-50 0-85 35t-35 85ZM200-160v-480 480Z"/></svg>
-                    <span id="cart-count" class="badge badge-soft bg-info border-none rounded-full badge-info-content absolute top-0 -right-4  ">0</span>
+                    <span id="cart-count" class="badge badge-sm badge-soft bg-info border-none rounded-full badge-info-content absolute top-0 -right-2  ">0</span>
                 </div>
             </label>
         </div>
