--- a/samboni-astro/src/styles/global.css
+++ b/samboni-astro/src/styles/global.css
@@ -45,20 +45,10 @@ html {
 
 body {
     @apply bg-base-200 relative;
-    background-color: oklch(var(--b2)) !important;
-}
-
-body::before {
-    content: '';
-    position: fixed;
-    inset: 0;
     background-image: url('/bean-inside.png');
     background-repeat: repeat;
     background-size: 50px 50px;
-    mix-blend-mode: soft-light;
-    opacity: 0.7;
-    pointer-events: none;
-    z-index: 0;
+    background-blend-mode: soft-light;
 }
 
 h1{
