adjust cors, add news page and news slug page. adjust about

--- a/samboni-astro/src/components/CartDrawer.astro
+++ b/samboni-astro/src/components/CartDrawer.astro
@@ -1,7 +1,7 @@
 ---
-import Welcome from "./Welcome.astro";
-import Store from "./Store.astro";
-import About from "./About.astro";
+import WelcomeArea from "../sections/WelcomeArea.astro";
+import StoreArea from "../sections/StoreArea.astro";
+import AboutComponent from "../sections/AboutArea.astro";
 import Nav from "./Nav.astro";
 ---
 
