--- a/samboni-astro/src/pages/about.astro
+++ b/samboni-astro/src/pages/about.astro
@@ -1,6 +1,6 @@
 ---
 import "../styles/global.css";
-import AboutComponent from "../components/About.astro";
+import AboutComponent from "../sections/AboutArea.astro";
 import CartDrawerContainer from "../layouts/CartDrawerContainer.astro";
 import LayoutTwo from "../layouts/LayoutTwo.astro";
 import Header from "../components/Header.astro";
