--- a/samboni-astro/src/sections/StoreArea.astro
+++ b/samboni-astro/src/sections/StoreArea.astro
@@ -1,5 +1,5 @@
 ---
-import ProductCard from "./ProductCard.astro";
+import ProductCard from "../components/ProductCard.astro";
 import {
   getShopifyCollections,
   type ShopifyCollection,
