update about page, fix news slug images, update svg's

--- a/samboni-astro/src/components/Header.astro
+++ b/samboni-astro/src/components/Header.astro
@@ -7,7 +7,7 @@ interface Props {
 const { title } = Astro.props;
 ---
 
-<header class="relative w-full overflow-hidden">
+<header class="relative w-full overflow-hidden z-10">
     <div class="h-auto bg-accent text-white">
     <Nav />
   <div class="h-30 bg-accent flex justify-center items-center">
