--- a/samboni-astro/src/sections/AboutArea.astro
+++ b/samboni-astro/src/sections/AboutArea.astro
@@ -2,22 +2,74 @@
 
 ---
 
-<section class="w-full">
-  <div id="video1" class="w-full relative">
-    <!-- Video container with mask -->
-    <div class="w-full h-100 relative overflow-hidden">
-      <video
-        autoplay
-        muted
-        loop
-        playsinline
-        class="w-full h-full object-cover"
-        >
-        <source src="1000003161.mp4" type="video/mp4"/>
-      </video>
+<section class="w-full h-full bg-base-300">
+  <div>
+    <div class="relative mt-[-5vw]">
+      <svg class="absolute w-0 h-0" aria-hidden="true">
+        <defs>
+          <clipPath id="wave-clip-1" clipPathUnits="objectBoundingBox">
+            <path d="M0,0 v0.901 l0.0128,0.00556 c0.0129,0.00536,0.0385,0.0165,0.0642,0.01463 c0.0257,-0.00165,0.0513,-0.01607,0.077,-0.00886 s0.0513,0.03606,0.077,0.03874 c0.0257,0.00288,0.0513,-0.02061,0.077,-0.02081 c0.0257,-0.00041,0.0513,0.02226,0.077,0.01978 c0.0257,-0.00227,0.0513,-0.02988,0.0768,-0.04533 s0.0509,-0.01875,0.0764,-0.0136 s0.0511,0.01875,0.0768,0.02947 s0.0513,0.01814,0.077,0.01752 s0.0513,-0.00969,0.077,-0.01896 s0.0513,-0.01875,0.077,-0.01401 s0.0513,0.02411,0.077,0.04225 s0.0513,0.03545,0.0642,0.0439 l0.0128,0.00866 V0 H0 Z"/>
+          </clipPath>
+        </defs>
+      </svg>
+
+      <div id="video1" class="w-full relative">
+        <div class="w-full relative overflow-hidden video-mask-container-one">
+          <video
+            autoplay
+            muted
+            loop
+            playsinline
+            class="w-full h-full object-cover">
+            <source src="/videos/1000003161.mp4" type="video/mp4"/>
+          </video>
+        </div>
+      </div>
     </div>
-    <!-- Wave SVG overlay -->
-    <svg id="visual" viewBox="0 0 1000 100" width="1000" height="100" class="w-full h-auto block fill-base-100 -mt-1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"><path d="M0 26L12.8 28.7C25.7 31.3 51.3 36.7 77 35.8C102.7 35 128.3 28 154 31.5C179.7 35 205.3 49 231 50.3C256.7 51.7 282.3 40.3 308 40.2C333.7 40 359.3 51 385 49.8C410.7 48.7 436.3 35.3 461.8 27.8C487.3 20.3 512.7 18.7 538.2 21.2C563.7 23.7 589.3 30.3 615 35.5C640.7 40.7 666.3 44.3 692 44C717.7 43.7 743.3 39.3 769 34.8C794.7 30.3 820.3 25.7 846 28C871.7 30.3 897.3 39.7 923 48.5C948.7 57.3 974.3 65.7 987.2 69.8L1000 74L1000 0L987.2 0C974.3 0 948.7 0 923 0C897.3 0 871.7 0 846 0C820.3 0 794.7 0 769 0C743.3 0 717.7 0 692 0C666.3 0 640.7 0 615 0C589.3 0 563.7 0 538.2 0C512.7 0 487.3 0 461.8 0C436.3 0 410.7 0 385 0C359.3 0 333.7 0 308 0C282.3 0 256.7 0 231 0C205.3 0 179.7 0 154 0C128.3 0 102.7 0 77 0C51.3 0 25.7 0 12.8 0L0 0Z" fill="#FFCD00" stroke-linecap="round" stroke-linejoin="miter"></path></svg>
+
+    <div class="h-auto my-20">
+      <div class="flex flex-col gap-5 container">
+        <p class="text-center md:text-xl font-bold">Samboni coffee comes from organic and traditional ancient farming practices, harvested at an altitude of 1,750 meters above sea level in the Cauca cordillera ridge of the Colombian Andes. Our small family farms produce a distinctive, highest-quality Arabica bean. Cultivated by families since 1886, our coffee has a long history of excellence that continues to improve.</p>
+        <p class="text-center md:text-xl font-bold">Polyplanted and washed with sugar cane and citrus for a beautiful aroma and soft taste, Samboni delivers the ultimate euphoric boost to start your morning.</p>
+      </div>
+      
+    </div>
+
+    <div class="relative mb-[-6vw] sm:mb-[-6vw] md:mb-[-4vw]">
+      <svg class="absolute w-0 h-0" aria-hidden="true">
+        <defs>
+          <clipPath id="wave-clip-2" clipPathUnits="objectBoundingBox">
+            <path d="M0,1 V0.0602 l0.0152,-0.00474 c0.0151,-0.00495,0.0455,-0.01443,0.0758,-0.01958 s0.0607,-0.00598,0.091,-0.00762 c0.0303,-0.00165,0.0607,-0.00453,0.091,-0.00969,0.0303,-0.00515,0.0607,-0.01257,0.091,-0.01298,0.0303,-0.00041,0.0607,0.00659,0.0908,0.00618,0.0302,-0.00041,0.0602,-0.00783,0.0904,-0.01071,0.0301,-0.00268,0.0605,-0.00062,0.0908,0.00866 s0.0607,0.02576,0.091,0.03133 c0.0303,0.00536,0.0607,0,0.091,-0.00289,0.0303,-0.00268,0.0607,-0.00268,0.091,-0.00742,0.0303,-0.00495,0.0607,-0.01443,0.0758,-0.01937 l0.0152,-0.00474 v0.99334 H0 Z"/>
+          </clipPath>
+        </defs>
+      </svg>
+
+      <div id="video2" class="w-full relative">
+        <div class="w-full relative overflow-hidden video-mask-container-two">
+          <video
+            autoplay
+            muted
+            loop
+            playsinline
+            class="w-full h-full object-cover">
+            <source src="/videos/1000003225.mp4" type="video/mp4"/>
+          </video>
+        </div>
+      </div>
+    </div>
   </div>
+
 </section>
+
+<style>
+  .video-mask-container-one {
+    clip-path: url(#wave-clip-1);
+    aspect-ratio: 1000 / 300;
+  }
+
+  .video-mask-container-two {
+    clip-path: url(#wave-clip-2);
+    aspect-ratio: 1000 / 300;
+  }
+</style>
 
