add pages global and getPages function to about and faq

--- a/samboni-astro/src/pages/faq.astro
+++ b/samboni-astro/src/pages/faq.astro
@@ -4,13 +4,14 @@ import AboutComponent from "../sections/AboutArea.astro";
 import CartDrawerContainer from "../layouts/CartDrawerContainer.astro";
 import LayoutTwo from "../layouts/LayoutTwo.astro";
 import Header from "../components/Header.astro";
+import FAQArea from "../sections/FAQArea.astro";
 
 
 ---
 
 <LayoutTwo>
-    <Header title="About Samboni"/>
+    <Header title="FAQ"/>
     <CartDrawerContainer>
-        <AboutComponent />
+        <FAQArea />
     </CartDrawerContainer>
 </LayoutTwo>
