--- a/samboni-astro/src/pages/index.astro
+++ b/samboni-astro/src/pages/index.astro
@@ -8,7 +8,7 @@ import StoreArea from "../sections/StoreArea.astro";
 
 <Layout>
     <CartDrawerContainer>
-        <section class="w-full h-screen">
+        <section class="w-full h-[calc(100vh-4rem)]">
             <WelcomeArea />
         </section>
         <StoreArea />
