--- a/samboni-astro/src/sections/WelcomeArea.astro
+++ b/samboni-astro/src/sections/WelcomeArea.astro
@@ -5,13 +5,13 @@
 <div id="welcome-container" class="w-full h-full select-none overflow-hidden">
 	<div id="main-container" class="relative h-full w-full">
 		<!-- Mobile layout: stacked -->
-		<div class="flex md:hidden flex-col justify-center items-center h-full gap-4">
+		<div class="flex md:hidden flex-col justify-center items-center h-full gap-1">
 			<div class="flex justify-center gap-2">
 				<img class="h-50 sm:h-50 -rotate-6 border-4 border-white drop-shadow-[0px_4px_4px_rgba(0,0,0,0.25)]" src="/images/1000003118.jpg" alt="">
 				<img class="h-50 sm:h-50 rotate-3 border-4 border-white drop-shadow-[0px_4px_4px_rgba(0,0,0,0.25)]" src="/images/1000003116.jpg" alt="">
 			</div>
 			<div class="flex flex-col items-center gap-2 z-10">
-				<h1 class="text-[7rem] sm:text-[7rem] text-white drop-shadow-[3px_3px_0px_#C8102E] leading-none -rotate-6">Samboni</h1>
+				<h1 class="text-[4rem] md:text-[6rem] text-white drop-shadow-[3px_3px_0px_#C8102E] leading-none -rotate-6">Samboni</h1>
 				<h2 class="font-[Fraunces] text-sm sm:text-base bg-white px-2 py-1 text-center max-w-[90vw]">A <span class="text-secondary underline">TRUE AUTHENTIC</span> TASTE FROM THE <span class="text-secondary underline">HEART</span> OF <span class="text-secondary underline">COLOMBIA</span></h2>
 			</div>
 			<div class="flex justify-center gap-2">
@@ -23,14 +23,14 @@
 		<!-- Desktop layout: overlapping -->
 		<div class="hidden md:flex relative w-full h-full flex-col justify-center items-center gap-5 px-4">
 			<div class="w-auto relative text-center">
-				<h1 class="text-[10rem] lg:text-[14rem] xl:text-[20rem] text-white drop-shadow-[6px_6px_0px_#C8102E] relative z-100 leading-none -rotate-6">Samboni</h1>
-				<div class="flex absolute -top-10 lg:-top-20 -left-10 lg:-left-25 z-1">
-					<img class="h-60 lg:h-80 xl:h-130 -rotate-9 border-4 lg:border-8 border-white drop-shadow-[0px_4px_4px_rgba(0,0,0,0.25)]" src="/images/1000003118.jpg" alt="">
-					<img class="h-60 lg:h-80 xl:h-130 -translate-5 lg:-translate-10 rotate-3 border-4 lg:border-8 border-white drop-shadow-[0px_4px_4px_rgba(0,0,0,0.25)]" src="/images/1000003116.jpg" alt="">
+				<h1 class="text-[8rem] lg:text-[10rem] xl:text-[20rem] text-white drop-shadow-[6px_6px_0px_#C8102E] relative z-100 leading-none -rotate-6">Samboni</h1>
+				<div class="flex absolute -top-20 lg:-top-20 -left-20 lg:-left-25 z-1">
+					<img class="h-60 lg:h-80 xl:h-100 -rotate-9 border-4 lg:border-8 border-white drop-shadow-[0px_4px_4px_rgba(0,0,0,0.25)]" src="/images/1000003118.jpg" alt="">
+					<img class="h-60 lg:h-80 xl:h-100 -translate-5 lg:-translate-10 rotate-3 border-4 lg:border-8 border-white drop-shadow-[0px_4px_4px_rgba(0,0,0,0.25)]" src="/images/1000003116.jpg" alt="">
 				</div>
-				<div class="flex absolute -bottom-20 lg:-bottom-50 -right-15 lg:-right-40 z-1">
-					<img class="h-60 lg:h-72 xl:h-120 -rotate-9 border-4 lg:border-8 border-white drop-shadow-[0px_4px_4px_rgba(0,0,0,0.25)]" src="/images/1000003121.jpg" alt="">
-					<img class="h-60 lg:h-72 xl:h-120 -translate-x-5 lg:-translate-x-10 rotate-5 border-4 lg:border-8 border-white drop-shadow-[0px_4px_4px_rgba(0,0,0,0.25)]" src="/images/1000003111.jpg" alt="">
+				<div class="flex absolute -bottom-35 lg:-bottom-50 -right-25 lg:-right-40 z-1">
+					<img class="h-60 lg:h-65 xl:h-100 -rotate-9 border-4 lg:border-8 border-white drop-shadow-[0px_4px_4px_rgba(0,0,0,0.25)]" src="/images/1000003121.jpg" alt="">
+					<img class="h-60 lg:h-65 xl:h-100 -translate-x-5 lg:-translate-x-10 rotate-5 border-4 lg:border-8 border-white drop-shadow-[0px_4px_4px_rgba(0,0,0,0.25)]" src="/images/1000003111.jpg" alt="">
 				</div>
 			</div>
 			<h2 class="font-[Fraunces] text-xl lg:text-2xl bg-white px-4 py-2 z-10 -mt-4 text-center max-w-[90vw]">A <span class="text-secondary underline">TRUE AUTHENTIC</span> TASTE FROM THE <span class="text-secondary underline">HEART</span> OF <span class="text-secondary underline">COLOMBIA</span></h2>
